[package]
name = "spark-miden-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_chacha = "0.3.1"
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "next", features = ["testing"] }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "next", features = ["testing"] }
rand = "0.8.5"
miden-stdlib = "0.9.1"
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", branch = "next" }
miden-vm = "0.9.1"
miden-processor = "0.9.2"
miden-prover = "0.9.1"
tokio = "1.37.0"
miden-client = "0.3.0"
figment = "0.10.19"
uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
cargo-make = "0.37.12"
proptest = "1.4.0"
masm-formatter = "0.1.2"

[patch.crates-io]
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", branch = "next" }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", branch = "next" }

[features]
default = ["std"]
integration = ["testing", "concurrent", "uuid"]
concurrent = ["miden-lib/concurrent", "miden-objects/concurrent", "miden-tx/concurrent"]
std = ["miden-objects/std"]
testing = ["miden-objects/testing", "miden-lib/testing", "miden-tx/testing"]
test_utils = ["miden-objects/testing"]
