[package]
name = "spark-miden-v1"
version = "0.1.0"
edition = "2021"

[dependencies]
rand_chacha = "0.3.1"
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", tag = "v0.4.0", features = ["testing"] }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", tag = "v0.4.0", features = ["testing"] }
rand = "0.8.5"
miden-stdlib = "0.9.1"
miden-lib = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-lib", tag = "v0.4.0" }
miden-vm = "0.9.1"
miden-processor = "0.9.2"
miden-prover = "0.9.1"
tokio = { version = "1.37.0", features = ["macros"] }
miden-client = { version = "0.4.1", features = ["tonic", "sqlite", "testing"] }
figment = { version = "0.10.19", features = ["toml"] }
uuid = { version = "1.6.1", features = ["serde", "v4"], optional = true }
cargo-make = "0.37.12"
proptest = "1.4.0"
masm-formatter = "0.1.2"

[patch.crates-io]
miden-objects = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-objects", tag = "v0.4.0" }
miden-tx = { git = "https://github.com/0xPolygonMiden/miden-base.git", package = "miden-tx", tag = "v0.4.0" }

[features]
integration = ["testing", "concurrent", "uuid"]
concurrent = ["miden-lib/concurrent", "miden-objects/concurrent", "miden-tx/concurrent"]
std = ["miden-objects/std"]
testing = ["miden-objects/testing", "miden-lib/testing", "miden-tx/testing"]
test_utils = ["miden-objects/testing"]

[dev-dependencies]
miden-objects = { package = "miden-objects", git = "https://github.com/0xPolygonMiden/miden-base.git", tag = "v0.4.0", default-features = false, features = ["serde", "testing"] }
uuid = { version = "1.6.1", features = ["serde", "v4"] }
assert_cmd = { version = "2.0" }
